--- a/tests_main.ipynb
+++ b/tests_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,15 @@
     "\n",
     "with open('./Data/list_directors.pickle', 'rb') as archivo:\n",
     "    list_directors = pickle.load(archivo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_movie = pd.read_pickle('./Data/api.pickle')"
    ]
   },
   {
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +247,7 @@
        "11                   5  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +533,7 @@
        "'La pelicula no se encuentra en la base de datos'"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -572,11 +581,11 @@
       "text/plain": [
        "{'actor': 'Tim Roth',\n",
        " 'cantidad_filmaciones': 60,\n",
-       " 'retorno_total': 59.652523166099996,\n",
-       " 'retorno_promedio': 0.9942087194349999}"
+       " 'retorno_total': 59.652523166146054,\n",
+       " 'retorno_promedio': 0.9942087194357676}"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,14 +655,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'director': 'Stephen Hopkins',\n",
-       " 'retorno_total_director': 14.145571503200001,\n",
+       " 'retorno_total_director': 14.145571503214287,\n",
        " 'peliculas': ['Judgment Night',\n",
        "  'Predator 2',\n",
        "  'Blown Away',\n",
@@ -666,7 +675,7 @@
        "  'Tube Tales',\n",
        "  'Thorne: Sleepyhead',\n",
        "  'Race'],\n",
-       " 'anio': [1993,\n",
+       " 'año': [1993,\n",
        "  1990,\n",
        "  1994,\n",
        "  2007,\n",
@@ -679,44 +688,44 @@
        "  2010,\n",
        "  2016],\n",
        " 'retorno_pelicula': [0.0,\n",
-       "  1.6320090857,\n",
+       "  1.6320090857142857,\n",
        "  0.0,\n",
-       "  1.5692764750000001,\n",
+       "  1.569276475,\n",
        "  1.7019927875,\n",
-       "  2.7710448750000003,\n",
+       "  2.771044875,\n",
        "  0.01042248,\n",
        "  1.5,\n",
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
        "  4.9608258],\n",
-       " 'budget_pelicula': [0,\n",
-       "  35000000,\n",
-       "  0,\n",
-       "  40000000,\n",
-       "  80000000,\n",
-       "  8000000,\n",
-       "  25000000,\n",
-       "  50000000,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  5000000],\n",
-       " 'revenue_pelicula': [12136938,\n",
-       "  57120318,\n",
-       "  30156002,\n",
-       "  62771059,\n",
-       "  136159423,\n",
-       "  22168359,\n",
-       "  260562,\n",
-       "  75000000,\n",
-       "  0,\n",
-       "  0,\n",
-       "  0,\n",
-       "  24804129]}"
+       " 'budget_pelicula': [0.0,\n",
+       "  35000000.0,\n",
+       "  0.0,\n",
+       "  40000000.0,\n",
+       "  80000000.0,\n",
+       "  8000000.0,\n",
+       "  25000000.0,\n",
+       "  50000000.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  5000000.0],\n",
+       " 'revenue_pelicula': [12136938.0,\n",
+       "  57120318.0,\n",
+       "  30156002.0,\n",
+       "  62771059.0,\n",
+       "  136159423.0,\n",
+       "  22168359.0,\n",
+       "  260562.0,\n",
+       "  75000000.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  24804129.0]}"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
