--- a/tests_main.ipynb
+++ b/tests_main.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,33 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_movie = pd.read_pickle('./Data/api.pickle')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "Can't get attribute '_unpickle_block' on <module 'pandas._libs.internals' from 'c:\\\\Users\\\\guill\\\\anaconda3\\\\envs\\\\render\\\\lib\\\\site-packages\\\\pandas\\\\_libs\\\\internals.cp37-win_amd64.pyd'>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_16080\\1381725154.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'./Data/api37.pickle'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0marchivo\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mdf_movie\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marchivo\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: Can't get attribute '_unpickle_block' on <module 'pandas._libs.internals' from 'c:\\\\Users\\\\guill\\\\anaconda3\\\\envs\\\\render\\\\lib\\\\site-packages\\\\pandas\\\\_libs\\\\internals.cp37-win_amd64.pyd'>"
-     ]
-    }
-   ],
-   "source": [
-    "with open('./Data/api37.pickle', 'rb') as archivo:\n",
-    "    df_movie = pickle.load(archivo)"
    ]
   },
   {
@@ -605,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,83 +633,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'director': 'Stephen Hopkins',\n",
-       " 'retorno_total_director': 14.145571503214287,\n",
-       " 'peliculas': ['Judgment Night',\n",
-       "  'Predator 2',\n",
-       "  'Blown Away',\n",
-       "  'The Reaping',\n",
-       "  'Lost in Space',\n",
-       "  'A Nightmare on Elm Street 5: The Dream Child',\n",
-       "  'Under Suspicion',\n",
-       "  'The Ghost and the Darkness',\n",
-       "  'The Life and Death of Peter Sellers',\n",
-       "  'Tube Tales',\n",
-       "  'Thorne: Sleepyhead',\n",
-       "  'Race'],\n",
-       " 'año': [1993,\n",
+       "{'director': 'Aki Kaurismäki',\n",
+       " 'retorno_total_director': 1.1703028985507247,\n",
+       " 'peliculas': ['Ariel',\n",
+       "  'Shadows in Paradise',\n",
+       "  'Lights in the Dusk',\n",
+       "  'The Man Without a Past',\n",
+       "  'The Match Factory Girl',\n",
+       "  'I Hired a Contract Killer',\n",
+       "  'Drifting Clouds',\n",
+       "  'Hamlet Goes Business',\n",
+       "  'Visions of Europe',\n",
+       "  'Leningrad Cowboys Go America',\n",
+       "  'Ten Minutes Older: The Trumpet',\n",
+       "  'La Vie de Bohème',\n",
+       "  'Leningrad Cowboys Meet Moses',\n",
+       "  'To Each His Own Cinema',\n",
+       "  'Juha',\n",
+       "  'Take Care of Your Scarf, Tatiana',\n",
+       "  'Calamari Union',\n",
+       "  'Rocky VI',\n",
+       "  'Le Havre',\n",
+       "  'Crime and Punishment',\n",
+       "  'The Saimaa Gesture',\n",
+       "  'Dirty Hands',\n",
+       "  'Thru the Wire',\n",
+       "  'The Other Side of Hope'],\n",
+       " 'año': [1988,\n",
+       "  1986,\n",
+       "  2006,\n",
+       "  2002,\n",
        "  1990,\n",
+       "  1990,\n",
+       "  1996,\n",
+       "  1987,\n",
+       "  2004,\n",
+       "  1989,\n",
+       "  2002,\n",
+       "  1992,\n",
        "  1994,\n",
        "  2007,\n",
-       "  1998,\n",
-       "  1989,\n",
-       "  2000,\n",
-       "  1996,\n",
-       "  2004,\n",
        "  1999,\n",
-       "  2010,\n",
-       "  2016],\n",
+       "  1994,\n",
+       "  1985,\n",
+       "  1986,\n",
+       "  2011,\n",
+       "  1983,\n",
+       "  1981,\n",
+       "  1989,\n",
+       "  1987,\n",
+       "  2017],\n",
        " 'retorno_pelicula': [0.0,\n",
-       "  1.6320090857142857,\n",
        "  0.0,\n",
-       "  1.569276475,\n",
-       "  1.7019927875,\n",
-       "  2.771044875,\n",
-       "  0.01042248,\n",
-       "  1.5,\n",
+       "  1.1703028985507247,\n",
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
-       "  4.9608258],\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0],\n",
        " 'budget_pelicula': [0.0,\n",
-       "  35000000.0,\n",
        "  0.0,\n",
-       "  40000000.0,\n",
-       "  80000000.0,\n",
-       "  8000000.0,\n",
-       "  25000000.0,\n",
-       "  50000000.0,\n",
+       "  1380000.0,\n",
+       "  0.0,\n",
+       "  474700.0,\n",
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
-       "  5000000.0],\n",
-       " 'revenue_pelicula': [12136938.0,\n",
-       "  57120318.0,\n",
-       "  30156002.0,\n",
-       "  62771059.0,\n",
-       "  136159423.0,\n",
-       "  22168359.0,\n",
-       "  260562.0,\n",
-       "  75000000.0,\n",
+       "  2000000.0,\n",
        "  0.0,\n",
        "  0.0,\n",
        "  0.0,\n",
-       "  24804129.0]}"
+       "  0.0,\n",
+       "  0.0,\n",
+       "  1000000.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  3850000.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0],\n",
+       " 'revenue_pelicula': [0.0,\n",
+       "  0.0,\n",
+       "  1615018.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0]}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_director('Stephen Hopkins')"
+    "get_director('Aki Kaurismäki')"
    ]
   }
  ],
