--- a/tests_main.ipynb
+++ b/tests_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "4                                     [George Lucas]  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,14 +345,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'idioma': 'en', 'cantidad': 31938}\n"
+      "{'idioma': 'en', 'cantidad': '31938'}\n"
      ]
     }
    ],
@@ -362,16 +362,16 @@
     "    if not isinstance(idioma, str):\n",
     "        return 'Debe ingresar un texto'\n",
     "    else:\n",
-    "        respuesta = df_movie[df_movie['original_language'] == idioma]['original_language'].count()\n",
+    "        respuesta = df_movie[df_movie['original_language'] == idioma].shape[0]\n",
     "\n",
-    "    return {'idioma':idioma, 'cantidad':respuesta}\n",
+    "    return {'idioma':idioma, 'cantidad': str(respuesta)}\n",
     "\n",
     "print(peliculas_idioma('en'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -431,14 +431,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'pais': 'United States of America', 'cantidad': 21044}\n"
+      "{'pais': 'United States of America', 'cantidad': '21044'}\n"
      ]
     }
    ],
@@ -448,26 +448,22 @@
     "    if not isinstance(pais, str):\n",
     "        return 'Debe ingresar un texto'\n",
     "    else:\n",
-    "        count = 0\n",
-    "        for country_list in df_movie['production_countries']:\n",
-    "            if country_list:\n",
-    "                count += country_list.count(pais)\n",
-    "        \n",
-    "        return {'pais':pais, 'cantidad':count}\n",
+    "        cantidad = df_movie[df_movie['production_countries'].apply(lambda paises: pais in paises if isinstance(paises, list) else False)].shape[0]\n",
+    "        return {'pais':pais, 'cantidad': str(cantidad)}\n",
     "\n",
     "print(peliculas_pais('United States of America'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'productora': 'Lucasfilm', 'revenue_total': 9898421106.0, 'cantidad': 29}\n"
+      "{'productora': 'Lucasfilm', 'revenue_total': '9898421106.0', 'cantidad': '29'}\n"
      ]
     }
    ],
@@ -480,8 +476,7 @@
     "        temp_df = df_movie[df_movie['production_companies'].apply(lambda companies: productora in companies if isinstance(companies, list) else False)]\n",
     "        cantidad = temp_df.shape[0]\n",
     "        revenue_total = temp_df['revenue'].sum()\n",
-    "\n",
-    "        return {'productora':productora, 'revenue_total': revenue_total,'cantidad':cantidad}\n",
+    "        return {'productora':productora, 'revenue_total': str(revenue_total),'cantidad':str(cantidad)}\n",
     "\n",
     "print(productoras_exitosas('Lucasfilm'))"
    ]
